<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <RatingBar
            android:id="@+id/item_rating"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="1" />

        <TextView
            android:id="@+id/item_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="end"
            android:text="@string/restaurant_location"
            android:textColor="#9FA7A3" />

        </LinearLayout>


    <TextView
        android:id="@+id/item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:text="@string/restaurant_text"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:srcCompat="@drawable/image_placeholder"
        android:contentDescription="@string/placeholder_image"
        android:maxHeight="300dp"
        android:tag="placeholder"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"/>

    <TextView
        android:id="@+id/item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/restaurant_desc"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="2"
        android:textSize="16sp"
        android:layout_marginBottom="5dp" />

</LinearLayout>