<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RatingBar
            android:id="@+id/restaurant_rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="1" />

        <TextView
            android:id="@+id/location_text"
            android:layout_width="0dp"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/restaurant_location"
            android:textColor="#9FA7A3"
            android:textSize="14sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/placeholder_textView"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/photo_image_view"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_weight="1"
        android:maxHeight="300dp"
        android:scaleType="centerCrop"
        tools:srcCompat="@drawable/image_placeholder"
        android:contentDescription="@string/logo_type"/>

    <TextView
        android:id="@+id/desc_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/placeholder_textView"
        android:textSize="18sp" />

</LinearLayout>